Added ISO profiles for Hyper-V and QEMU

--- a/grub.cfg
+++ b/grub.cfg
@@ -14,10 +14,20 @@ insmod gzio
 insmod part_gpt
 insmod ext2
 
-set timeout=2
+set timeout=-1
 search --no-floppy --set=root -l 'AlmaLinux-8-10-x86_64-dvd'
 
-menuentry 'NetBox AlmaLinux 8.10' --class fedora --class gnu-linux --class gnu --class os {
-	linuxefi /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-8-10-x86_64-dvd quiet inst.ks=cdrom:/netbox-ks.cfg
+menuentry 'NetBox AlmaLinux 8.10 (Hyper-V)' --class fedora --class gnu-linux --class gnu --class os {
+	linuxefi /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-8-10-x86_64-dvd quiet inst.ks=cdrom:/netbox-ks-hyperv.cfg
+	initrdefi /images/pxeboot/initrd.img
+}
+
+menuentry 'NetBox AlmaLinux 8.10 (VMware)' --class fedora --class gnu-linux --class gnu --class os {
+	linuxefi /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-8-10-x86_64-dvd quiet inst.ks=cdrom:/netbox-ks-vmware.cfg
+	initrdefi /images/pxeboot/initrd.img
+}
+
+menuentry 'NetBox AlmaLinux 8.10 (QEMU)' --class fedora --class gnu-linux --class gnu --class os {
+	linuxefi /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-8-10-x86_64-dvd quiet inst.ks=cdrom:/netbox-ks-qemu.cfg
 	initrdefi /images/pxeboot/initrd.img
 }
