Added luks passphrase to kickstart files

--- a/netbox-ks-vmware.cfg
+++ b/netbox-ks-vmware.cfg
@@ -20,7 +20,7 @@ network  --hostname=netbox
 firstboot --enable
 
 ignoredisk --only-use=nvme0n1
-autopart --encrypted
+autopart --encrypted --passphrase=sedrftgy
 # Partition clearing information
 clearpart --none --initlabel
 
