--- a/netbox-ks-hyperv.cfg
+++ b/netbox-ks-hyperv.cfg
@@ -20,7 +20,7 @@ network  --hostname=netbox
 firstboot --enable
 
 ignoredisk --only-use=sda
-autopart --encrypted
+autopart --encrypted --passphrase=sedrftgy
 # Partition clearing information
 clearpart --none --initlabel
 
