--- a/ansible/master.yml
+++ b/ansible/master.yml
@@ -10,3 +10,4 @@
     - import_tasks: 05-netbox.yml
     - import_tasks: 06-netbox-utils.yml
     - import_tasks: 07-apache.yml
+#    - import_tasks: 99-finalize.yml
