--- a/netbox-ks-qemu.cfg
+++ b/netbox-ks-qemu.cfg
@@ -8,7 +8,7 @@ text
 %end
 
 # Keyboard layouts
-keyboard --xlayouts='us (altgr-intl)'
+keyboard --xlayouts='fr (oss)'
 # System language
 lang fr_FR.UTF-8
 
@@ -19,13 +19,13 @@ network  --hostname=netbox
 # Run the Setup Agent on first boot
 firstboot --enable
 
-ignoredisk --only-use=sda
+ignoredisk --only-use=vda
 autopart --encrypted --passphrase=sedrftgy
 # Partition clearing information
 clearpart --none --initlabel
 
 # System timezone
-timezone America/New_York --isUtc
+timezone Europe/Paris --isUtc --nontp
 
 #Root password
 rootpw --lock
