--- a/netbox-ks-vmware.cfg
+++ b/netbox-ks-vmware.cfg
@@ -8,7 +8,7 @@ text
 %end
 
 # Keyboard layouts
-keyboard --xlayouts='us (altgr-intl)'
+keyboard --xlayouts='fr (oss)'
 # System language
 lang fr_FR.UTF-8
 
@@ -25,7 +25,7 @@ autopart --encrypted --passphrase=sedrftgy
 clearpart --none --initlabel
 
 # System timezone
-timezone America/New_York --isUtc
+timezone Europe/Paris --isUtc --nontp
 
 #Root password
 rootpw --lock
