--- a/netbox-ks-qemu.cfg
+++ b/netbox-ks-qemu.cfg
@@ -41,6 +41,45 @@ pwpolicy user --minlen=6 --minquality=1 --notstrict --nochanges --emptyok
 pwpolicy luks --minlen=6 --minquality=1 --notstrict --nochanges --notempty
 %end
 
+%pre
+cd /usr/lib64/python3.6/site-packages/pyanaconda/payload/dnf
+patch -p0 << EOF
+--- payload.orig.py     2024-07-05 17:04:44.660349238 +0200
++++ payload.py  2024-07-05 17:15:50.466889945 +0200
+@@ -1376,10 +1376,6 @@
+                 log.error("Installation failed: %r", e)
+                 go_to_failure_limbo()
+
+-        if os.path.exists(self._download_location):
+-            log.info("Removing existing package download "
+-                     "location: %s", self._download_location)
+-            shutil.rmtree(self._download_location)
+         pkgs_to_download = self._base.transaction.install_set
+         log.info('Downloading packages to %s.', self._download_location)
+         progressQ.send_message(_('Downloading packages'))
+@@ -1435,11 +1431,7 @@
+
+         process.join()
+         # Don't close the mother base here, because we still need it.
+-        if os.path.exists(self._download_location):
+-            log.info("Cleaning up downloaded packages: "
+-                     "%s", self._download_location)
+-            shutil.rmtree(self._download_location)
+-        else:
++        if not os.path.exists(self._download_location):
+             # Some installation sources, such as NFS, don't need to download packages to
+             # local storage, so the download location might not always exist. So for now
+             # warn about this, at least until the RFE in bug 1193121 is implemented and
+EOF
+%end
+
+%pre-install
+mkdir -p /mnt/sysroot/dnf.package.cache
+mkdir -p /mnt/sysroot/usr/lib/firmware
+mount -t tmpfs none /mnt/sysroot/dnf.package.cache
+mount -t tmpfs none /mnt/sysroot/usr/lib/firmware
+%end
+
 %post
 cat > /etc/sudoers.d/ansible << EOF
 ansible ALL=(ALL:ALL) NOPASSWD: ALL
