Added /dnf.package.cache removal

--- a/netbox-ks-hyperv.cfg
+++ b/netbox-ks-hyperv.cfg
@@ -81,6 +81,7 @@ mount -t tmpfs none /mnt/sysroot/usr/lib/firmware
 %end
 
 %post
+rmdir /dnf.package.cache
 cat > /etc/sudoers.d/ansible << EOF
 ansible ALL=(ALL:ALL) NOPASSWD: ALL
 EOF
